--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.0",
     "bootswatch": "^5.2.0",
     "next": "12.2.5",
