--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "functions/getIcons.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "functions/getIcons.js", "lib/gtag.js"],
   "exclude": ["node_modules"]
 }
